--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "drop-tables": "node data/drop-tables.js",
     "load-seed-data": "node data/load-seed-data.js",
     "recreate-tables": "npm run drop-tables && npm run create-tables",
-    "setup-db": "npm run recreate-tables && npm run load-seed-data",
+    "setup-db": "npm run recreate-tables",
     "setup-db:prod": "heroku run npm run setup-db",
     "setup-heroku": "npm run create-heroku-db && npm run create-heroku-db -- --as DEV_DATABASE && heroku config:set PGSSLMODE=require && npm run get-dev-db-url",
     "create-heroku-db": "heroku addons:create heroku-postgresql:hobby-dev",
